mongo_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: joker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: joker
  template:
    metadata:
      labels:
        app: joker
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
          - mountPath: /data/db
            name: storage  
      volumes:
      - name: storage
        persistentVolumeClaim:
           claimName: mongo-pvc
